2007-08-27  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* scripts/check-sync-on-feeds (usage, main, failed, getFeed,
	  gotFeedServerPort, managerConnected, gotPlanetState,
	  gotWorkerHeavenState):
	Made script connect to manager to get host name and port of
	feed servers.

2007-08-27  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/bouncers/component.py (Bouncer.do_start):
	Set the medium on the plug.
	(Bouncer.authenticate): Pass the right arguments to the plug.

	* flumotion/test/test_component_bouncers_bouncer.py: 
	* flumotion/test/test_component_bouncers_plug.py: Refactor to use
	the base class.

	* flumotion/test/Makefile.am (EXTRA_DIST): 
	* flumotion/test/bouncertest.py: Factored out a test base class.

	* flumotion/component/bouncers/plug.py (BouncerPlug.setMedium):
	New method to set the medium on a bouncer plug. Optional.
	(BouncerPlug.expireKeycardId): Actually do the callRemote.

	* flumotion/test/Makefile.am (EXTRA_DIST):
	* flumotion/test/test_component_bouncers_plug.py
	(TrivialBouncerTest): New test, taken from the one for the
	deprecated bouncer interface.

2007-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/common.py (version, mergeImplements,
	  parseComponentId):
	  Fix copyright header.  Remove pre-Twisted 2 stuff.  Add doc.

2007-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/wizard/save.py (Component.toXML):
	  Consistently use 2-space indent in config xml.

2007-08-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion.spec.in:
	Add flumotion-nagios to spec.

2007-08-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* scripts/check-sync-on-feeds (videoEventProbe, audioEventProbe,
	  sendNewsegments, videoBufferProbe, audioBufferProbe):
	Improve the debug logging.

2007-08-23  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* scripts/check-sync-on-feeds:
	Script that probably could do with a bit of refactoring, to